--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:theme="@style/Theme.ComposeLearning"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".BasicLayoutActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="@string/title_activity_basic_layout"
             android:theme="@style/Theme.ComposeLearning">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +23,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.ComposeLearning" />
     </application>
 
 </manifest>
